--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 скелет HTML-документа. <br>
                                 Второй способ — набрать «html» и в выпадающем списке выбрать html:5.</p>
 
-                        <img src="IMG/3.gif" alt="3gif" class="pictures1">
+                        <img src="/IMG/3.gif" alt="3gif" class="pictures1">
 
                         <h4 id="Content32"><a class="anchor" href="#Content32">#</a>Подключаем стили</h4>
 
