--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <h1>Продвинутый HTML и CSS</h1>
 
-                <h2>5.7 Мини-курс по Emmet.</h2>
+                <h2>Мини-курс по Emmet.</h2>
 
                 <div class="container_text">
                         <h3 id="Content1">Содержание</h3>
