--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="container_text">
 
                         <h3 id="Content2"><a class="anchor" href="#Content2">#</a>Введение</h3>
-                        <img src="../IMG/52.png" alt="52" class="pictures1">
+                        <img src="/images/52.png" alt="52" class="pictures1">
 
                         <p><span>Emmet</span> — это незаменимый инструмент для верстальщиков и
                                 веб-разработчиков,
@@ -161,7 +161,7 @@
                                 скелет HTML-документа. <br>
                                 Второй способ — набрать «html» и в выпадающем списке выбрать html:5.</p>
 
-                        <img src="/IMG/3.gif" alt="3gif" class="pictures1">
+                        <img src="/images/3.gif" alt="3gif" class="pictures1">
 
                         <h4 id="Content32"><a class="anchor" href="#Content32">#</a>Подключаем стили</h4>
 
@@ -172,7 +172,7 @@
                                 другое.
                         </p>
 
-                        <img src="../IMG/4gif.gif" alt="4gif" class="pictures1">
+                        <img src="/images/4gif.gif" alt="4gif" class="pictures1">
 
                         <h4 id="Content33"><a class="anchor" href="#Content33">#</a>Добавляем ссылки</h4>
 
@@ -184,7 +184,7 @@
                                 значение атрибута. Например, <span>«a:tel».</span>
                         </p>
 
-                        <img src="../IMG/5.gif" alt="5gif" class="pictures1">
+                        <img src="/images/5.gif" alt="5gif" class="pictures1">
 
                         <h4 id="Content34"><a class="anchor" href="#Content34">#</a>Вводим теги</h4>
 
@@ -196,14 +196,14 @@
                                 нужный вариант и, если тег парный, добавит к нему закрывающий.
                         </p>
 
-                        <img src="../IMG/6.gif" alt="6gif" class="pictures1">
+                        <img src="/images/6.gif" alt="6gif" class="pictures1">
 
                         <h4 id="Content35"><a class="anchor" href="#Content35">#</a>Задаём классы и идентификаторы</h4>
 
                         <p>После нужного тега добавляем символы <span>«.» </span> или <span>«#»</span>, пишем название
                                 класса или идентификатора и получаем оформленный тег.</p>
 
-                        <img src="../IMG/51.png" alt="51" class="pictures1">
+                        <img src="/images/51.png" alt="51" class="pictures1">
 
                         <div class="ramka">
                                 <strong>Примечание.</strong> Если нужно задать класс или <span>id</span> для
@@ -213,7 +213,7 @@
                                 название класса или идентификатора.
                         </div>
 
-                        <img src="../IMG/7.gif" alt="7gif" class="pictures1">
+                        <img src="/images/7.gif" alt="7gif" class="pictures1">
 
                         <h4 id="Content36"><a class="anchor" href="#Content36">#</a>Используем группировку и вложенность
                         </h4>
@@ -242,7 +242,7 @@
                                 &lt;a href=""&gt;&lt;/a&gt;
                         </div>
 
-                        <img src="../IMG/8.gif" alt="8gif" class="pictures1">
+                        <img src="/images/8.gif" alt="8gif" class="pictures1">
 
                         <p>Знак <span>«*»</span> повторяет элементы указанное количество раз.</p>
 
@@ -256,7 +256,7 @@
                                 &lt;section&gt;&lt;/section&gt;<br>
                         </div>
 
-                        <img src="../IMG/9.gif" alt="9gif" class="pictures1">
+                        <img src="/images/9.gif" alt="9gif" class="pictures1">
 
                         <h5 id="Content38"><a class="anchor" href="#Content38">#</a>Пример 2. Дочерние элементы</h5>
 
@@ -274,7 +274,7 @@
                                 &lt;/ul&gt;
                         </div>
 
-                        <img src="../IMG/10.gif" alt="10gif" class="pictures1">
+                        <img src="/images/10.gif" alt="10gif" class="pictures1">
 
                         <h5 id="Content39"><a class="anchor" href="#Content39">#</a>Пример 3. Сгруппированные элементы
                         </h5>
@@ -309,7 +309,7 @@
                                 &lt;main&gt;&lt;/main&gt;<br>
                                 &lt;footer&gt;&lt;/footer&gt;
                         </div>
-                        <img src="../IMG/11.gif" alt="11gif" class="pictures1">
+                        <img src="/images/11.gif" alt="11gif" class="pictures1">
 
                         <h5 id="Content310"><a class="anchor" href="#Content310">#</a>Пример 4. Генерируем рыбу-текст
                         </h5>
@@ -325,7 +325,7 @@
                                 &lt;/p&gt;
                         </div>
 
-                        <img src="../IMG/12.gif" alt="12gif" class="pictures1">
+                        <img src="/images/12.gif" alt="12gif" class="pictures1">
 
 
 
@@ -368,7 +368,7 @@
                                 }
                         </div>
 
-                        <img src="../IMG/13.gif" alt="13gif" class="pictures1">
+                        <img src="/images/13.gif" alt="13gif" class="pictures1">
 
                         <p>Если несколько свойств начинаются с одинаковой буквы или набора букв — например, color и
                                 columns — выбрать сочетания для них можно за секунды. <br>
@@ -415,7 +415,7 @@
                                 }
                         </div>
 
-                        <img src="../IMG/14.gif" alt="14gif" class="pictures1">
+                        <img src="/images/14.gif" alt="14gif" class="pictures1">
 
                         <h4 id="Content43"><a class="anchor" href="#Content43">#</a>Уточнения свойств через двоеточие
                         </h4>
@@ -439,7 +439,7 @@
                                 color:&#128999 red;<br>
                                 }<br>
                         </div>
-                        <img src="../IMG/15.gif" alt="15gif" class="pictures1">
+                        <img src="/images/15.gif" alt="15gif" class="pictures1">
 
                         <h4 id="Content44"><a class="anchor" href="#Content44">#</a>Единицы измерения</h4>
 
@@ -466,7 +466,7 @@
                                 }
                         </div>
 
-                        <img src="../IMG/16.gif" alt="16gif" class="pictures1">
+                        <img src="/images/16.gif" alt="16gif" class="pictures1">
 
                         <p>Для тех свойств, где требуется указать единицы измерения, по умолчанию используются
                                 абсолютные пиксели (px). Если вы хотите указать значение в процентах, то используйте
@@ -498,7 +498,7 @@
                                 }
                         </div>
 
-                        <img src="../IMG/17.gif" alt="17gif" class="pictures1">
+                        <img src="/images/17.gif" alt="17gif" class="pictures1">
 
                         <h4 id="Content45"><a class="anchor" href="#Content45">#</a>Несколько значений через дефис</h4>
 
@@ -530,7 +530,7 @@
                                 }
                         </div>
 
-                        <img src="../IMG/18.gif" alt="18gif" class="pictures1">
+                        <img src="/images/18.gif" alt="18gif" class="pictures1">
                         <p>Частный случай — указание цвета с прозрачностью.</p>
 
                         <div class="ramka">
@@ -545,7 +545,7 @@
                                 }
                         </div>
 
-                        <img src="../IMG/19.gif" alt="19gif" class="pictures1">
+                        <img src="/images/19.gif" alt="19gif" class="pictures1">
 
                         <h4 id="Content46"><a class="anchor" href="#Content46">#</a>Использование декларации !important
                         </h4>
@@ -564,7 +564,7 @@
                                 }
                         </div>
 
-                        <img src="../IMG/20.gif" alt="20gif" class="pictures1">
+                        <img src="/images/20.gif" alt="20gif" class="pictures1">
                         <p><strong>Важно помнить, </strong>что !important следует использовать с осторожностью. Слишком
                                 частое применение может привести к созданию
                                 запутанного и трудно отлаживаемого CSS-кода, особенно если таблица стилей большая.
